--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,15 +9,13 @@
       </div>
 
       <div>
-        <p>published: 07.11.2015, 2:47</p>
-        <h2><a href="">My first post</a></h2>
-        <p>Hello! Having fun at Detroit Labs in the D thanks to Django Girls!</p>
-    </div>
-
-    <div>
-      <p>published: 07.11.2015, 2:51</p>
-      <h2><a href="">My second post</a></h2>
-      <p>It's a beautiful day in Detroit!<p>
+        {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p> {{ post.text|linebreaks }}</p>
+          </div>
+  {% endfor %}
     </div>
     </body>
 </html>
